workloads/forgejo/manifests/networkPolicy-traefik-in.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-traefik
  namespace: forgejo
spec:
  podSelector: {}
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
              matchLabels:
                app.kubernetes.io/name: traefik
      ports:
        - { protocol: TCP, port: 3000 }
